check_output.txt
cargo : warning: 
unexpected `cfg` 
condition name: `kani`
At line:1 char:1
+ cargo check 
--workspace 
--all-targets 
--all-features 2>&1 | 
Out-File  ...
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (warning: u   
 nexpe...on name:     
`kani`:String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
  --> transaction-rece
ipt-contract\src\lib.r
s:18:7
   |
18 | #[cfg(kani)]
   |       ^^^^
   |
   = help: expected 
names are: `docsrs`, 
`feature`, and `test` 
and 31 more
   = help: consider 
using a Cargo feature 
instead
   = help: or 
consider adding in 
`Cargo.toml` the 
`check-cfg` lint 
config for the lint:
            
[lints.rust]
            
unexpected_cfgs = { 
level = "warn", 
check-cfg = 
['cfg(kani)'] }
   = help: or 
consider adding `print
ln!("cargo::rustc-chec
k-cfg=cfg(kani)");` 
to the top of the 
`build.rs`
   = note: see <https:
//doc.rust-lang.org/ni
ghtly/rustc/check-cfg/
cargo-specifics.html> 
for more information 
about checking 
conditional 
configuration
   = note: `#[warn(une
xpected_cfgs)]` on by 
default

warning: unexpected 
`cfg` condition name: 
`kani`
   --> transaction-rec
eipt-contract\src\lib.
rs:281:7
    |
281 | #[cfg(kani)]
    |       ^^^^
    |
    = help: consider 
using a Cargo feature 
instead
    = help: or 
consider adding in 
`Cargo.toml` the 
`check-cfg` lint 
config for the lint:
             
[lints.rust]
             
unexpected_cfgs = { 
level = "warn", 
check-cfg = 
['cfg(kani)'] }
    = help: or 
consider adding `print
ln!("cargo::rustc-chec
k-cfg=cfg(kani)");` 
to the top of the 
`build.rs`
    = note: see <https
://doc.rust-lang.org/n
ightly/rustc/check-cfg
/cargo-specifics.html>
 for more information 
about checking 
conditional 
configuration

warning: unexpected 
`cfg` condition name: 
`kani`
  --> staking_pool\src
\lib.rs:19:7
   |
19 | #[cfg(kani)]
   |       ^^^^
   |
   = help: expected 
names are: `docsrs`, 
`feature`, and `test` 
and 31 more
   = help: consider 
using a Cargo feature 
instead
   = help: or 
consider adding in 
`Cargo.toml` the 
`check-cfg` lint 
config for the lint:
            
[lints.rust]
            
unexpected_cfgs = { 
level = "warn", 
check-cfg = 
['cfg(kani)'] }
   = help: or 
consider adding `print
ln!("cargo::rustc-chec
k-cfg=cfg(kani)");` 
to the top of the 
`build.rs`
   = note: see <https:
//doc.rust-lang.org/ni
ghtly/rustc/check-cfg/
cargo-specifics.html> 
for more information 
about checking 
conditional 
configuration
   = note: `#[warn(une
xpected_cfgs)]` on by 
default

warning: unexpected 
`cfg` condition name: 
`kani`
  --> rent_wallet\src\
lib.rs:11:7
   |
11 | #[cfg(kani)]
   |       ^^^^
   |
   = help: expected 
names are: `docsrs`, 
`feature`, and `test` 
and 31 more
   = help: consider 
using a Cargo feature 
instead
   = help: or 
consider adding in 
`Cargo.toml` the 
`check-cfg` lint 
config for the lint:
            
[lints.rust]
            
unexpected_cfgs = { 
level = "warn", 
check-cfg = 
['cfg(kani)'] }
   = help: or 
consider adding `print
ln!("cargo::rustc-chec
k-cfg=cfg(kani)");` 
to the top of the 
`build.rs`
   = note: see <https:
//doc.rust-lang.org/ni
ghtly/rustc/check-cfg/
cargo-specifics.html> 
for more information 
about checking 
conditional 
configuration
   = note: `#[warn(une
xpected_cfgs)]` on by 
default

    Checking 
deal_escrow v0.1.0 (C:
\Users\USER\monorepo\c
ontracts\deal_escrow)
warning: `transaction-
receipt-contract` 
(lib) generated 2 
warnings
warning: 
`staking_pool` (lib) 
generated 1 warning
warning: 
`rent_wallet` (lib 
test) generated 1 
warning
warning: unexpected 
`cfg` condition name: 
`kani`
 --> staking_rewards\s
rc\lib.rs:7:7
  |
7 | #[cfg(kani)]
  |       ^^^^
  |
  = help: expected 
names are: `docsrs`, 
`feature`, and `test` 
and 31 more
  = help: consider 
using a Cargo feature 
instead
  = help: or consider 
adding in 
`Cargo.toml` the 
`check-cfg` lint 
config for the lint:
           
[lints.rust]
           
unexpected_cfgs = { 
level = "warn", 
check-cfg = 
['cfg(kani)'] }
  = help: or consider 
adding `println!("carg
o::rustc-check-cfg=cfg
(kani)");` to the top 
of the `build.rs`
  = note: see <https:/
/doc.rust-lang.org/nig
htly/rustc/check-cfg/c
argo-specifics.html> 
for more information 
about checking 
conditional 
configuration
  = note: `#[warn(unex
pected_cfgs)]` on by 
default

warning: 
`staking_pool` (lib 
test) generated 1 
warning (1 duplicate)
warning: 
`staking_rewards` 
(lib) generated 1 
warning
warning: 
`rent_wallet` (lib) 
generated 1 warning 
(1 duplicate)
warning: unexpected 
`cfg` condition name: 
`kani`
 --> staking_rewards\s
rc\formal_properties.r
s:8:16
  |
8 | ...ttr(kani, ka...
  |        ^^^^
  |
  = help: consider 
using a Cargo feature 
instead
  = help: or consider 
adding in 
`Cargo.toml` the 
`check-cfg` lint 
config for the lint:
           
[lints.rust]
           
unexpected_cfgs = { 
level = "warn", 
check-cfg = 
['cfg(kani)'] }
  = help: or consider 
adding `println!("carg
o::rustc-check-cfg=cfg
(kani)");` to the top 
of the `build.rs`
  = note: see <https:/
/doc.rust-lang.org/nig
htly/rustc/check-cfg/c
argo-specifics.html> 
for more information 
about checking 
conditional 
configuration

warning: unused 
imports: 
`MockAuthInvoke` and 
`MockAuth`
   --> staking_rewards
\src\lib.rs:593:48
    |
593 | ..._, MockAuth, 
MockAuthInvoke};
    |       ^^^^^^^^  
^^^^^^^^^^^^^^
    |
    = note: `#[warn(un
used_imports)]` on by 
default

warning: unused 
import: 
`TimelockError`
 --> timelock\src\inte
gration_test.rs:3:43
  |
3 |     use 
crate::{Timelock, 
TimelockClient, 
TimelockError};
  |                   
                      
  ^^^^^^^^^^^^^
  |
  = note: `#[warn(unus
ed_imports)]` on by 
default

warning: unused 
variable: 
`target_client`
  --> timelock\src\int
egration_test.rs:41:13
   |
41 |         let 
target_client = MockTa
rgetClient::new(env, 
&target_id);
   |             
^^^^^^^^^^^^^ help: 
if this is 
intentional, prefix 
it with an 
underscore: 
`_target_client`
   |
   = note: `#[warn(unu
sed_variables)]` on 
by default

warning: unused 
variable: `tx_hash`
  --> timelock\src\tes
t.rs:57:13
   |
57 |         let 
tx_hash = 
client.queue(&admin, 
&target, &function, 
&args, &delay);
   |             
^^^^^^^ help: if this 
is intentional, 
prefix it with an 
underscore: `_tx_hash`

warning: unused 
variable: 
`exec_result`
  --> timelock\src\tes
t.rs:69:13
   |
69 |         let 
exec_result = client.t
ry_execute(&target, 
&function, &args, 
&eta);
   |             
^^^^^^^^^^^ help: if 
this is intentional, 
prefix it with an 
underscore: 
`_exec_result`

warning: `transaction-
receipt-contract` 
(lib test) generated 
2 warnings (2 
duplicates)
warning: 
`staking_rewards` 
(lib test) generated 
3 warnings (1 
duplicate) (run 
`cargo fix --lib -p 
staking_rewards 
--tests` to apply 1 
suggestion)
warning: `timelock` 
(lib test) generated 
4 warnings (run 
`cargo fix --lib -p 
timelock --tests` to 
apply 1 suggestion)
error[E0046]: not all 
trait items 
implemented, missing: 
`is_paused`
   --> deal_escrow\src
\lib.rs:278:1
    |
278 | impl Pausable 
for DealEscrow {
    | ^^^^^^^^^^^^^^^^
^^^^^^^^^^^^ missing 
`is_paused` in 
implementation
    |
    = help: implement 
the missing item: `fn 
is_paused(_: Env) -> 
bool { todo!() }`

For more information 
about this error, try 
`rustc --explain 
E0046`.
error: could not 
compile `deal_escrow` 
(lib) due to 1 
previous error
warning: build 
failed, waiting for 
other jobs to 
finish...
error: could not 
compile `deal_escrow` 
(lib test) due to 1 
previous error
